
8.67  2020-12-04
  - Deprecated Mojolicious::Routes::Route::over in favor of Mojolicious::Routes::Route::requires.
  - Deprecated Mojolicious::Routes::Route::via in favor of Mojolicious::Routes::Route::methods.
  - Deprecated Mojolicious::Routes::Route::detour.
  - Added methods and requires methods to Mojolicious::Routes::Route.
  - Improved Mojolicious::Commands to throw an exception for invalid commands.

8.66  2020-11-28
  - Deprecated logging to "log/$mode.log" (if a log directory exists) in Mojolicious. The default will simply be STDERR
    in the future.
  - Added support for preloading controllers and other classes during startup of Mojolicious applications.
  - Added EXPERIMENTAL preload_namespaces attribute to Mojolicious.
  - Added EXPERIMENTAL warmup method to Mojolicious.
  - Added EXPERIMENTAL load_classes function to Mojo::Loader.
  - Removed experimental status from humanize_bytes method in Mojo::ByteStream.
  - Removed experimental status from humanize_bytes function in Mojo::Util.
  - Improved find_modules function in Mojo::Loader with recursive option.
  - Improved Mojo::DOM::CSS to throw exceptions for unknown CSS selectors.
  - Fixed a bug in Mojolicious::Commands where help messages would not be displayed correctly for some commands.
    (kiwiroy)
  - Fixed a bug in Mojolicious::Routes::Pattern where type_start was treated as a regex. (Grinnz)

8.65  2020-11-10
  - Added generate dockerfile command. (tianon)
  - Improved cookbook with container deployment recipe.
  - Improved security of secure_compare function in Mojo::Util. (robrwo)
  - Fixed all generated code to consistently use a *::Sandbox class, instead of *::SandBox.

8.64  2020-11-01
  - Replaced prettify.js with highlight.js. (zakame)
  - Fixed a bug in Mojo::DOM where the tree root would be checked for all pseudo-classes.
  - Fixed a redefined subroutine warning in eval command. (elmar)

8.63  2020-10-11