@@ -14,7 +14,7 @@ sub register {
   my $host;
   ($host, $path) = ($1 ? qr/^(?:.*\.)?\Q$2\E$/i : qr/^\Q$2\E$/i, $3) if $path =~ m!^(\*\.)?([^/]+)(/.*)?$!;
 
-  my $route = $app->routes->route($path)->partial(1)->to(app => $embed);
+  my $route = $app->routes->any($path)->partial(1)->to(app => $embed);
   return $host ? $route->requires(host => $host) : $route;
 }
 
